# SwarmTrade

./: .circuit_breaker_state.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPETITIVE_INTEL.md  Dockerfile  README.md  ROADMAP.md  SKILL.md  SOUL.md  VIDEO_SCRIPT.md  docker-compose.yml  pyproject.toml  railway.toml  session_log.json  strategy_notes.md  vercel.json
.github/workflows/: ci.yml
.stitch/: DESIGN.md
.stitch/designs/: agent-detail.html  dashboard.html  settings.html  trade-history.html
backtest_data/: eth_365d_daily.json
backtest_results/: 20260412_202938_ethusd_5760min.json  20260412_203014_ethusd_5760min.json  20260412_235951_ethusd_5760min.json
hermes-skill/: SKILL.md  connect.sh
hermes-skill/references/: protocol.md  signals.md
hermes-skill/scripts/: swarm_bridge.py
swarmtrader/: __init__.py  agent_factory.py  agent_learning.py  agent_memory_v2.py  agent_payments.py  agent_policies.py  agent_protocol.py  agent_registry.py  agents.py  agents_advanced.py  ai_brain.py  alerts.py  alpha_swarm.py  arb_executor.py  arbitrage.py  auth.py  automation.py  backtest.py  backtester.py  backtesting_arena.py  billing.py  birdeye.py  capital_allocator.py  checkpoint.py  compliance.py  config.py  confluence.py  core.py  correlation.py  cross_chain.py  dashboard.py  database.py  debate.py  demo.py  dex_multi.py  dex_quotes.py  erc8004.py  exchanges.py  execution.py  factor_model.py  (+92 more)
swarmtrader/static/: index.html  slides.html
tests/: test_phases.py  test_smoke.py
