[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmtrader"
version = "0.1.0"
description = "Swarm Trade — Multi-agent autonomous trading platform"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "python-dotenv>=1.0,<2.0",
    "web3>=7.0,<8.0",
    "eth-account>=0.13,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "psycopg-pool>=3.1,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "pytest-asyncio>=0.23,<1.0"]

[tool.setuptools.packages.find]
include = ["swarmtrader*"]
